ResourceLoadStatisticsDatabaseStore::domainIDFromString failed, error message: bad parameter or other API misuse https://bugs.webkit.org/show_bug.cgi?id=212916 <rdar://problem/64127238>

Reviewed by Sihui Liu.

Make sure m_domainIDFromStringStatement is accessed in a separate
scope in ensureResourceStatisticsForRegistrableDomain() so it will be
reset before being used again.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::domainID const):
Add debug assert to ensure that tests catch this case.

(WebKit::ResourceLoadStatisticsDatabaseStore::ensureResourceStatisticsForRegistrableDomain const):


Canonical link: https://commits.webkit.org/225743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262752 268f45cc-cd09-0410-ab3c-d52691b4dbfc